Better vertical spacing on wide but short screens. Fixes #122.

--- a/views/sass/_person.scss
+++ b/views/sass/_person.scss
@@ -16,15 +16,27 @@ body.person-page {
 
 .person-cards {
     position: relative;
-    height: 16em;
+    height: 10em;
     text-align: center;
-
-    @media (min-width: $screen_medium_min) {
-        padding-top: 1em;
-    }
 
     & > ul {
         @extend .unstyled-list;
+    }
+
+    @media (min-height: 460px) {
+        height: 11em;
+    }
+
+    @media (min-height: 500px) {
+        height: 12em;
+    }
+
+    @media (min-height: 540px) {
+        height: 14em;
+    }
+
+    @media (min-height: 600px) {
+        height: 15em;
     }
 }
 
@@ -39,7 +51,8 @@ body.person-page {
     left: 50%;
     width: 16em;
     margin-left: -8em;
-    height: 11em;
+    height: 10em;
+    line-height: 1.2em;
 
     // Vertically centre the card contents (in modern browsers)
     @include flexbox();
@@ -54,6 +67,22 @@ body.person-page {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    @media (min-height: 460px) {
+        height: 11em;
+    }
+
+    @media (min-height: 500px) {
+        height: 12em;
+    }
+
+    @media (min-height: 540px) {
+        height: 14em;
+    }
+
+    @media (min-height: 600px) {
+        height: 15em;
+    }
 
     &:first-child {
         cursor: move;
@@ -130,14 +159,22 @@ body.person-page {
 
 .person__picture {
     border-radius: 100%;
-    max-height: 4em;
+    max-height: 3em;
     width: auto;
+
+    @media (min-height: 460px) {
+        max-height: 3.5em;
+    }
+
+    @media (min-height: 500px) {
+        max-height: 4em;
+    }
 
     @media (min-height: 540px) {
         max-height: 4.5em;
     }
 
-    @media (min-height: 600px), (min-width: $screen_medium_min) {
+    @media (min-height: 600px) {
         max-height: 5em;
     }
 
@@ -151,7 +188,7 @@ body.person-page {
     width: 100%;
     word-wrap: break-word;
 
-    @media (min-height: 600px), (min-width: $screen_medium_min) {
+    @media (min-height: 600px) {
         font-size: 1.8em;
     }
 }
@@ -161,7 +198,7 @@ body.person-page {
     margin-top: 0.2em;
     font-size: 0.9em;
 
-    @media (min-height: 600px), (min-width: $screen_medium_min) {
+    @media (min-height: 600px) {
         font-size: 1em;
     }
 }
@@ -189,9 +226,23 @@ body.person-page {
 
 .person-card--advice,
 .level-complete {
-    h2 + p,
-    p + p {
+
+    h2, p {
         margin-top: 0.5em;
+    }
+
+    & > :first-child {
+        margin-top: 0;
+    }
+
+    @media (max-height: 459px) {
+        h2 {
+            font-size: 1.3em;
+        }
+
+        p {
+            font-size: 0.9em;
+        }
     }
 }
 
@@ -207,8 +258,8 @@ body.person-page {
     left: 50%;
     width: 16em;
     margin-left: -8em;
-    height: 11em;
     padding: 1em;
+    line-height: 1.2em;
 
     & > * {
         margin: 0;
@@ -221,27 +272,6 @@ body.person-page {
     @media (min-width: $screen_small_min) {
         width: 16em;
         margin-left: -8em;
-    }
-}
-
-@media (min-height: 500px) {
-    .person-card,
-    .level-complete {
-        height: 12em;
-    }
-}
-
-@media (min-height: 540px) {
-    .person-card,
-    .level-complete {
-        height: 14em;
-    }
-}
-
-@media (min-height: 600px) {
-    .person-card,
-    .level-complete {
-        height: 15em;
     }
 }
 
@@ -268,6 +298,10 @@ body.person-page {
         position: relative;
         height: 12em;
         bottom: 0;
+
+        .onboarding-page & {
+            height: 10em; // Onboarding has no Google link, so can be shorter
+        }
     }
 }
 
